--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -68,22 +68,23 @@
                 app:cardCornerRadius="20dp"
                 app:layout_constraintTop_toTopOf="parent">
 
-                    <com.github.mikephil.charting.charts.BarChart
-                        android:layout_width="match_parent"
-                        android:layout_height="380dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:id="@+id/ch_bar"/>
+                <com.github.mikephil.charting.charts.BarChart
+                    android:layout_width="match_parent"
+                    android:layout_height="380dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/ch_bar"/>
 
 
             </androidx.cardview.widget.CardView>
 
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/layout_chart"
-                app:layout_constraintEnd_toEndOf="@id/layout_chart"
-                android:layout_marginTop="10dp"
-                android:id="@+id/sp_year"/>
+            <!--            연도구현-->
+            <!--            <Spinner-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                app:layout_constraintTop_toBottomOf="@id/layout_chart"-->
+            <!--                app:layout_constraintEnd_toEndOf="@id/layout_chart"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:id="@+id/sp_year"/>-->
 
             <LinearLayout
                 android:id="@+id/layout_noti"
@@ -97,7 +98,9 @@
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:outlineSpotShadowColor="#BDBDBD"
-                app:layout_constraintTop_toBottomOf="@id/sp_year">
+                app:layout_constraintTop_toBottomOf="@id/layout_chart"
+                app:layout_constraintEnd_toEndOf="@id/layout_chart"
+                >
 
                 <ImageView
                     android:layout_width="wrap_content"
