--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:id="@+id/activity_container"
     android:background="#fffca3">
-
+    <include
+        layout="@layout/toolbar" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
