--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:id="@+id/activity_main"
     android:background="#D5FEFFD2"
     tools:context=".MainActivity">
-
+    <include
+        layout="@layout/toolbar" />
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
