--- a/app/src/main/res/layout/fragment_hour.xml
+++ b/app/src/main/res/layout/fragment_hour.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffca3"
+    android:background="#D5FEFFD2"
     tools:context=".LiveFragment">
-
+    <include
+        layout="@layout/toolbar" />
 
     <ImageView
         android:id="@+id/im_back"
@@ -42,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            style="@style/AppTheme"
             android:text="현재 위치 : 수원 스타필드"
             android:textSize="16sp" />
 
@@ -105,6 +107,7 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="20dp"
+                    style="@style/AppTheme"
                     android:text="현재 월간 인구 밀집도는 ... 입니다."
                     android:textSize="16sp" />
 
