--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffca3">
+    android:background="#D5FEFFD2">
 
-
+    <include
+        layout="@layout/toolbar" />
     <ImageView
         android:id="@+id/im_back"
         android:layout_width="19dp"
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            style="@style/AppTheme"
             android:text="현재 위치 : 수원 스타필드 1층"
             android:textSize="16sp" />
 
@@ -115,6 +117,7 @@
                     android:layout_marginEnd="5dp"
                     android:id="@+id/tv_notify"
                     android:layout_marginBottom="20dp"
+                    style="@style/AppTheme"
                     android:text="현재 월간 인구 밀집도는 ... 입니다."
                     android:textSize="16sp" />
 
@@ -136,6 +139,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/rb_cctv1"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv1"/>
 
                 <RadioButton
@@ -143,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:id="@+id/rb_cctv2"
-
+                    style="@style/AppTheme"
                     android:text="cctv2"
                     />
                 <RadioButton
@@ -151,6 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:id="@+id/rb_cctv3"
+                    style="@style/AppTheme"
                     android:text="cctv3"/>
 
                 <RadioButton
@@ -158,6 +163,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/rb_cctv4"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv4"/>
 
             </RadioGroup>
