--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffca3">
-
+    android:background="#D5FEFFD2">
+    <include
+        layout="@layout/toolbar" />
 
     <ImageView
         android:id="@+id/im_back"
@@ -104,6 +105,7 @@
                     android:layout_marginEnd="5dp"
                     android:id="@+id/tv_notify"
                     android:layout_marginBottom="20dp"
+                    style="@style/AppTheme"
                     android:text="현재 월간 인구 밀집도는 ... 입니다."
                     android:textSize="16sp" />
 
@@ -124,24 +126,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv1"/>
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv2"
                     />
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv3"/>
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
+                    style="@style/AppTheme"
                     android:text="cctv4"/>
 
             </RadioGroup>
