--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,27 @@
         <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="31">@color/intro_animaicon</item>
         <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="31">500</item>
     </style>
+
+    <!-- Base application theme -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here -->
+        <item name="android:fontFamily">@font/font_regular</item>
+    </style>
+
+    <!-- Bold text style -->
+    <style name="BoldText">
+        <item name="android:fontFamily">@font/font_bold</item>
+    </style>
+
+    <!-- ExtraBold text style -->
+    <style name="ExtraBoldText">
+    <item name="android:fontFamily">@font/font_extrabold</item>
+    </style>
+    <!--버튼색-->
+    <style name="YellowButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">#FFF500</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:fontFamily">@font/font_regular</item>
+    </style>
+
 </resources>
