--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/IDText"
         tools:ignore="MissingConstraints" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
         style="@style/YellowButton"
         android:layout_width="wrap_content"
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.702" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sign_up"
         style="@style/YellowButton"
         android:layout_width="wrap_content"
