--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -27,7 +27,7 @@
                 layout="@layout/toolbar" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/register"
+                android:id="@+id/registerButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="212dp"
