--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -31,6 +31,8 @@
             android:layout_marginStart="52dp"
             android:layout_marginTop="124dp"
             android:text="e-mail: "
+            style="@style/AppTheme"
+
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/EmailAddress"
             app:layout_constraintHorizontal_bias="0.0"
@@ -38,6 +40,7 @@
             app:layout_constraintTop_toBottomOf="@+id/sign_in_view" />
 
         <EditText
+            style="@style/AppTheme"
             android:id="@+id/EmailAddress"
             android:layout_width="165dp"
             android:layout_height="55dp"
@@ -57,6 +60,8 @@
             android:layout_marginTop="40dp"
             android:text="Password: "
             android:textSize="20sp"
+            style="@style/AppTheme"
+
             app:layout_constraintEnd_toStartOf="@+id/pwd_insert"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/email"
@@ -68,6 +73,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="Checking: "
+            style="@style/AppTheme"
+
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/pwd_in"
             app:layout_constraintTop_toBottomOf="@+id/pwd_insert" />
@@ -79,6 +86,9 @@
             android:layout_marginTop="94dp"
             android:layout_marginBottom="76dp"
             android:text="회원가입 완료"
+            android:textColor="#000000"
+            android:backgroundTint="#FFF500"
+            style="@style/AppTheme"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/pwd_check"
             app:layout_constraintHorizontal_bias="0.446"
@@ -87,9 +97,10 @@
             app:layout_constraintVertical_bias="0.14" />
 
         <EditText
+            style="@style/AppTheme"
             android:id="@+id/pwd_insert"
-            android:layout_width="162dp"
-            android:layout_height="46dp"
+            android:layout_width="165dp"
+            android:layout_height="55dp"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:inputType="textPassword"
@@ -97,10 +108,11 @@
             app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />
 
         <EditText
+            style="@style/AppTheme"
             android:id="@+id/pwd_check"
-            android:layout_width="161dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="22dp"
+            android:layout_width="165dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:ems="10"
             android:inputType="textPassword"
             app:layout_constraintBottom_toTopOf="@+id/complete"
@@ -112,17 +124,33 @@
 
         <EditText
             android:id="@+id/Nickname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="165dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="28dp"
+
             android:ems="10"
+            style="@style/AppTheme"
             android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/complete"
             app:layout_constraintEnd_toEndOf="@+id/pwd_check"
             app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintTop_toBottomOf="@+id/checking"
+            app:layout_constraintVertical_bias="1.0" />
+        <TextView
+            android:id="@+id/nickname"
+            style="@style/AppTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="244dp"
+            android:layout_marginTop="40dp"
+            android:text="NickName: "
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/Nickname"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/checking"
             app:layout_constraintTop_toBottomOf="@+id/checking"
             app:layout_constraintVertical_bias="1.0" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
