--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/activity_main"
-    android:background="#D5FEFFD2"
+    android:background="#D5FFFFF0"
     tools:context=".MainActivity">
 
     <include
@@ -50,6 +50,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_explore"
+            style="@style/AppTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -65,6 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            style="@style/AppTheme"
             android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintTop_toBottomOf="@id/imageView"
@@ -77,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            style="@style/AppTheme"
             android:textSize="18sp"
             android:textColor="#000000"
             app:layout_constraintTop_toBottomOf="@id/status_text"
@@ -86,9 +89,11 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
+            style="@style/BottomNavigationStyle"
+            android:background="#FFF9A3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/bottom_navigation_menu" />
-
+            app:menu="@menu/bottom_navigation_menu"
+            tools:layout_editor_absoluteX="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
