--- a/app/src/main/res/layout/activity_sign_up_1.xml
+++ b/app/src/main/res/layout/activity_sign_up_1.xml
@@ -12,12 +12,14 @@
 
         <EditText
             android:id="@+id/nickNameEditText"
+            style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"/>
 
         <EditText
             android:id="@+id/passwordEditText"
+            style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -25,6 +27,7 @@
 
         <EditText
             android:id="@+id/emailEditText"
+            style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"/>
@@ -34,6 +37,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Register"
+            style="@style/AppTheme"
+            android:textColor="#000000"
+            android:backgroundTint="#FFF500"
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
