--- a/app/src/main/res/layout/camera_activity.xml
+++ b/app/src/main/res/layout/camera_activity.xml
@@ -31,6 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/AppTheme"
+            android:textColor="#000000"
+            android:backgroundTint="#FFF500"
             android:text="확인" />
 
     </LinearLayout>
