--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -22,6 +22,7 @@
 
     <EditText
         android:id="@+id/IDText"
+        style="@style/AppTheme"
         android:layout_width="135dp"
         android:layout_height="43dp"
         android:layout_marginTop="116dp"
@@ -37,7 +38,7 @@
         style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="60dp"
         android:text="PWD: "
         android:textSize="20sp"
@@ -80,6 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인"
+        app:iconPadding="20dp"
         android:textColorLink="#FFF500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +95,6 @@
         style="@style/YellowButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFF500"
         android:text="회원가입하기"
         android:textColorLink="#FFF500"
         app:iconPadding="20dp"
@@ -103,5 +104,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.702" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
