일단 회원정보 돌아가는지 확인 필요

--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -15,6 +15,7 @@
 
         <TextView
             android:id="@+id/sign_in_view"
+            style="@style/AppTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
